// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPayload getPayload :: Pus05 pusService: 5 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 2,
  "groundDate": 1518791878584,
  "payload": Object {
    "apidName": "apidName4",
    "lastUpdateModeApid": 1,
    "lastUpdateTimeApid": "16/02/2018 14:37:58.584",
    "serviceApid": 2,
    "status": 200,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus05 pusService: 5 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 2,
  "groundDate": 1518791878584,
  "payload": Object {
    "apidName": "apidName2",
    "lastUpdateModeApid": 3,
    "lastUpdateTimeApid": "16/02/2018 14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 1,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus05 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus11 pusService: 11 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 5,
  "groundDate": 1518791878584,
  "payload": Object {
    "executionTimeFirstTc": "16/02/2018 14:37:58.584",
    "lastUpdateModeExecTimeFirstTc": 3,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeSubScheduleId": 2,
    "lastUpdateTimeExecTimeFirstTc": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSubscheduleId": "16/02/2018 14:37:58.584",
    "serviceApid": 2,
    "ssIdLabel": "ssid1",
    "status": 3,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus11 pusService: 11 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 3,
  "groundDate": 1518791878584,
  "payload": Object {
    "commandBinaryProfile": "96c296df880d196c296df880d196c296df880d196c296df880d1",
    "commandGroundStatus": "6",
    "commandName": "Command3",
    "commandStatus": 2,
    "currentExecutionTime": "16/02/2018 14:37:58.584",
    "initialExecutionTime": "16/02/2018 14:37:58.584",
    "lastUpdateModeBinProf": 1,
    "lastUpdateModeCommandId": 1,
    "lastUpdateModeCurrentExecTime": 1,
    "lastUpdateModeGroundStatus": 2,
    "lastUpdateModeInitialExecTime": 2,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeTotalTimeShiftOffset": 3,
    "lastUpdateTimeBinProf": "16/02/2018 14:37:58.584",
    "lastUpdateTimeCommandId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeCurrentExecTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeGroundStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeInitialExecTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeTotalTimeShiftOffset": "16/02/2018 14:37:58.584",
    "pus011CommandParameters": Array [
      Object {
        "lastUpdateMode": 3,
        "lastUpdateTime": "16/02/2018 14:37:58.584",
      },
      Object {
        "lastUpdateMode": 1,
        "lastUpdateTime": "16/02/2018 14:37:58.584",
      },
    ],
    "pus011TimeShift": Array [
      Object {
        "applicationTime": "16/02/2018 14:37:58.584",
        "lastUpdateMode": 1,
        "lastUpdateTime": "16/02/2018 14:37:58.584",
      },
      Object {
        "applicationTime": "16/02/2018 14:37:58.584",
        "lastUpdateMode": 1,
        "lastUpdateTime": "16/02/2018 14:37:58.584",
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "uniqueId": "1",
  },
}
`;

exports[`getPayload getPayload :: Pus11 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus12 pusService: 12 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 7,
  "groundDate": 1518791878584,
  "payload": Object {
    "checkType": "2",
    "isMonitoringIntervalSet": false,
    "isRepetitionNumberSet": false,
    "lastUpdateModeCheckType": 1,
    "lastUpdateModeMonId": 3,
    "lastUpdateModeMonInterval": 1,
    "lastUpdateModeMonStatus": 3,
    "lastUpdateModeParamId": 3,
    "lastUpdateModeProtectionStatus": 2,
    "lastUpdateModeRepetition": 1,
    "lastUpdateModeValParamExpectValue": 3,
    "lastUpdateModeValParamId": 1,
    "lastUpdateModeValParamMask": 1,
    "lastUpdateTimeCheckType": "16/02/2018 14:37:58.584",
    "lastUpdateTimeMonId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeMonInterval": "16/02/2018 14:37:58.584",
    "lastUpdateTimeMonStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeParamId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeProtectionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRepetition": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValParamExpectValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValParamId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValParamMask": "16/02/2018 14:37:58.584",
    "monitoringStatus": 2,
    "pus012MonitoringCheckPropertiesExpected": Object {
      "actionStatus": 1,
      "lastUpdateModeActionStatus": 2,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 1,
      "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeMask": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeValue": "16/02/2018 14:37:58.584",
      "ridStatus": 200,
    },
    "pus012MonitoringCheckPropertiesHigh": Object {
      "actionStatus": 200,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 1,
      "lastUpdateModeValue": 2,
      "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeMask": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeValue": "16/02/2018 14:37:58.584",
      "ridStatus": 3,
    },
    "pus012MonitoringCheckPropertiesLow": Object {
      "actionStatus": 3,
      "lastUpdateModeActionStatus": 2,
      "lastUpdateModeMask": 1,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 1,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeMask": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeValue": "16/02/2018 14:37:58.584",
      "ridStatus": 200,
    },
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus12 pusService: 12 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 7,
  "groundDate": 1518791878584,
  "payload": Object {
    "checkType": "1",
    "isMonitoringIntervalSet": false,
    "isRepetitionNumberSet": false,
    "lastUpdateModeCheckType": 3,
    "lastUpdateModeMonId": 3,
    "lastUpdateModeMonInterval": 2,
    "lastUpdateModeMonStatus": 3,
    "lastUpdateModeParamId": 3,
    "lastUpdateModeProtectionStatus": 2,
    "lastUpdateModeRepetition": 1,
    "lastUpdateModeValParamExpectValue": 2,
    "lastUpdateModeValParamId": 1,
    "lastUpdateModeValParamMask": 2,
    "lastUpdateTimeCheckType": "16/02/2018 14:37:58.584",
    "lastUpdateTimeMonId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeMonInterval": "16/02/2018 14:37:58.584",
    "lastUpdateTimeMonStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeParamId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeProtectionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRepetition": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValParamExpectValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValParamId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValParamMask": "16/02/2018 14:37:58.584",
    "monitoringStatus": 2,
    "pus012MonitoringCheckPropertiesExpected": Object {
      "actionStatus": 2,
      "lastUpdateModeActionStatus": 1,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 3,
      "lastUpdateModeValue": 1,
      "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeMask": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeValue": "16/02/2018 14:37:58.584",
      "ridStatus": 200,
    },
    "pus012MonitoringCheckPropertiesHigh": Object {
      "actionStatus": 3,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 3,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeMask": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeValue": "16/02/2018 14:37:58.584",
      "ridStatus": 3,
    },
    "pus012MonitoringCheckPropertiesLow": Object {
      "actionStatus": 3,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeMask": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
      "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
      "lastUpdateTimeValue": "16/02/2018 14:37:58.584",
      "ridStatus": 1,
    },
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus12 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus13 pusService: 13 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 10,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeEndTime": 1,
    "lastUpdateModeFailureCode": 1,
    "lastUpdateModeFileChecksum": 3,
    "lastUpdateModeLduId": 3,
    "lastUpdateModePercent": 3,
    "lastUpdateModeRemainSize": 2,
    "lastUpdateModeSize": 2,
    "lastUpdateModeStartTime": 2,
    "lastUpdateModeStatus": 2,
    "lastUpdateTimeEndTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFailureCode": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileChecksum": "16/02/2018 14:37:58.584",
    "lastUpdateTimeLduId": "16/02/2018 14:37:58.584",
    "lastUpdateTimePercent": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRemainSize": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSize": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStartTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "pus013LdtPart": Array [
      Object {
        "status": "3",
      },
      Object {
        "status": "3",
      },
    ],
    "serviceApid": 2,
    "status": "3",
    "transferType": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus13 pusService: 13 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 10,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeEndTime": 2,
    "lastUpdateModeFailureCode": 1,
    "lastUpdateModeFileChecksum": 2,
    "lastUpdateModeLduId": 2,
    "lastUpdateModePercent": 2,
    "lastUpdateModeRemainSize": 2,
    "lastUpdateModeSize": 3,
    "lastUpdateModeStartTime": 3,
    "lastUpdateModeStatus": 1,
    "lastUpdateTimeEndTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFailureCode": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileChecksum": "16/02/2018 14:37:58.584",
    "lastUpdateTimeLduId": "16/02/2018 14:37:58.584",
    "lastUpdateTimePercent": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRemainSize": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSize": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStartTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "pus013LdtPart": Array [
      Object {
        "status": "2",
      },
      Object {
        "status": "1",
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "status": "6",
    "transferType": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus13 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus14 pusService: 14 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 11,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatusRidSid": 2,
    "forwardingStatusTypeSubtype": 1,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 2,
    "lastUpdateModeRid": 1,
    "lastUpdateModeSid": 3,
    "lastUpdateModeSubSamplingRatio": 3,
    "lastUpdateModeTypeSubType": 1,
    "lastUpdateTimeFwdStatusTypeRidSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
    "lastUpdateTimeTypeSubType": "16/02/2018 14:37:58.584",
    "serviceApid": 2,
    "status": 3,
  },
}
`;

exports[`getPayload getPayload :: Pus14 pusService: 14 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 11,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatusRidSid": 2,
    "forwardingStatusTypeSubtype": 200,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 2,
    "lastUpdateModeRid": 1,
    "lastUpdateModeSid": 3,
    "lastUpdateModeSubSamplingRatio": 1,
    "lastUpdateModeTypeSubType": 1,
    "lastUpdateTimeFwdStatusTypeRidSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
    "lastUpdateTimeTypeSubType": "16/02/2018 14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus14 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus15 pusService: 15 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 14,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 2,
    "lastUpdateModeDownlinkStatus": 1,
    "lastUpdateModeStoreId": 1,
    "lastUpdateModeStoreStatus": 1,
    "lastUpdateModeStoreType": 1,
    "lastUpdateTimeDownlinkStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStoreId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStoreStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStoreType": "16/02/2018 14:37:58.584",
    "pus015Packet": Array [
      Object {
        "isSubsamplingRatioSet": true,
        "lastUpdateModePacketId": 2,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimePacketId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "serviceApid": 2,
      },
      Object {
        "isSubsamplingRatioSet": false,
        "lastUpdateModePacketId": 2,
        "lastUpdateModeSubSamplingRatio": 1,
        "lastUpdateTimePacketId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "serviceApid": 2,
      },
    ],
    "serviceApid": 2,
    "storeStatus": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus15 pusService: 15 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 14,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 2,
    "lastUpdateModeDownlinkStatus": 1,
    "lastUpdateModeStoreId": 3,
    "lastUpdateModeStoreStatus": 3,
    "lastUpdateModeStoreType": 1,
    "lastUpdateTimeDownlinkStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStoreId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStoreStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStoreType": "16/02/2018 14:37:58.584",
    "pus015Packet": Array [
      Object {
        "isSubsamplingRatioSet": true,
        "lastUpdateModePacketId": 2,
        "lastUpdateModeSubSamplingRatio": 3,
        "lastUpdateTimePacketId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
      Object {
        "isSubsamplingRatioSet": true,
        "lastUpdateModePacketId": 3,
        "lastUpdateModeSubSamplingRatio": 3,
        "lastUpdateTimePacketId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "storeStatus": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus15 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus18 pusService: 18 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 16,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 1,
    "lastUpdateModeObcpId": 3,
    "lastUpdateModeObsLevel": 2,
    "lastUpdateModePartitionId": 2,
    "lastUpdateModePriority": 2,
    "lastUpdateModeStatus": 2,
    "lastUpdateModeStepId": 3,
    "lastUpdateTimeObcpId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeObsLevel": "16/02/2018 14:37:58.584",
    "lastUpdateTimePartitionId": "16/02/2018 14:37:58.584",
    "lastUpdateTimePriority": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStepId": "16/02/2018 14:37:58.584",
    "serviceApid": 2,
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus18 pusService: 18 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 16,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 1,
    "lastUpdateModeObcpId": 3,
    "lastUpdateModeObsLevel": 2,
    "lastUpdateModePartitionId": 3,
    "lastUpdateModePriority": 2,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeStepId": 3,
    "lastUpdateTimeObcpId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeObsLevel": "16/02/2018 14:37:58.584",
    "lastUpdateTimePartitionId": "16/02/2018 14:37:58.584",
    "lastUpdateTimePriority": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStepId": "16/02/2018 14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 3,
  },
}
`;

exports[`getPayload getPayload :: Pus18 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus19 pusService: 19 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 17,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 1,
    "actionTcPacket": "29f1cc21a7fe929f1cc21a7fe929f1cc21a7fe929f1cc21a7fe9",
    "lastUpdateModeActionStatus": 1,
    "lastUpdateModeActionTc": 2,
    "lastUpdateModeEventActionRid": 3,
    "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeActionTc": "16/02/2018 14:37:58.584",
    "lastUpdateTimeEventActionRid": "16/02/2018 14:37:58.584",
  },
}
`;

exports[`getPayload getPayload :: Pus19 pusService: 19 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 17,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 3,
    "actionTcPacket": "784cbaf688b5784cbaf688b5784cbaf688b5784cbaf688b5",
    "lastUpdateModeActionStatus": 2,
    "lastUpdateModeActionTc": 3,
    "lastUpdateModeEventActionRid": 1,
    "lastUpdateTimeActionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeActionTc": "16/02/2018 14:37:58.584",
    "lastUpdateTimeEventActionRid": "16/02/2018 14:37:58.584",
  },
}
`;

exports[`getPayload getPayload :: Pus19 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus140 pusService: 140 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 20,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeCurrentValue": 1,
    "lastUpdateModeParamId": 2,
    "lastUpdateTimeCurrentValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeParamId": "16/02/2018 14:37:58.584",
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus140 pusService: 140 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 20,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeCurrentValue": 3,
    "lastUpdateModeParamId": 1,
    "lastUpdateTimeCurrentValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeParamId": "16/02/2018 14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus140 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus142 pusService: 142 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 22,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeServiceStatus": 2,
    "pus142FunctionalMonitoring": Array [
      Object {
        "actionStatus": 3,
        "checkingStatus": "1",
        "lastUpdateModeActionStatusv": 2,
        "lastUpdateModeCheckingStatus": 1,
        "lastUpdateModeFMonId": 2,
        "lastUpdateModeProtectionStatus": 3,
        "lastUpdateModeRid": 2,
        "lastUpdateModeRidStatus": 3,
        "lastUpdateModeStatus": 1,
        "lastUpdateModeValidParamExpectedValue": 2,
        "lastUpdateModeValidParamId": 3,
        "lastUpdateModeValidParamMask": 3,
        "lastUpdateTimeActionStatusv": "16/02/2018 14:37:58.584",
        "lastUpdateTimeCheckingStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeFMonId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeProtectionStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
        "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeValidParamExpectedValue": "16/02/2018 14:37:58.584",
        "lastUpdateTimeValidParamId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeValidParamMask": "16/02/2018 14:37:58.584",
        "pus142ParameterMonitoringDefinition": Array [
          Object {
            "lastUpdateModeId": 3,
            "lastUpdateTimeId": "16/02/2018 14:37:58.584",
            "serviceApid": 2,
          },
          Object {
            "lastUpdateModeId": 1,
            "lastUpdateTimeId": "16/02/2018 14:37:58.584",
            "serviceApid": 2,
          },
        ],
        "ridStatus": 3,
        "serviceApid": 2,
        "status": 2,
      },
      Object {
        "actionStatus": 2,
        "checkingStatus": "3",
        "lastUpdateModeActionStatusv": 1,
        "lastUpdateModeCheckingStatus": 1,
        "lastUpdateModeFMonId": 2,
        "lastUpdateModeProtectionStatus": 2,
        "lastUpdateModeRid": 3,
        "lastUpdateModeRidStatus": 2,
        "lastUpdateModeStatus": 2,
        "lastUpdateModeValidParamExpectedValue": 2,
        "lastUpdateModeValidParamId": 1,
        "lastUpdateModeValidParamMask": 2,
        "lastUpdateTimeActionStatusv": "16/02/2018 14:37:58.584",
        "lastUpdateTimeCheckingStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeFMonId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeProtectionStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
        "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeValidParamExpectedValue": "16/02/2018 14:37:58.584",
        "lastUpdateTimeValidParamId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeValidParamMask": "16/02/2018 14:37:58.584",
        "pus142ParameterMonitoringDefinition": Array [
          Object {
            "lastUpdateModeId": 3,
            "lastUpdateTimeId": "16/02/2018 14:37:58.584",
            "serviceApid": 2,
          },
          Object {
            "lastUpdateModeId": 1,
            "lastUpdateTimeId": "16/02/2018 14:37:58.584",
            "serviceApid": 2,
          },
        ],
        "ridStatus": 2,
        "serviceApid": 2,
        "status": 200,
      },
    ],
    "serviceStatus": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus142 pusService: 142 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 21,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 3,
    "checkingStatus": "1",
    "lastUpdateModeActionStatusv": 3,
    "lastUpdateModeCheckingStatus": 3,
    "lastUpdateModeFMonId": 1,
    "lastUpdateModeProtectionStatus": 2,
    "lastUpdateModeRid": 1,
    "lastUpdateModeRidStatus": 1,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeValidParamExpectedValue": 1,
    "lastUpdateModeValidParamId": 2,
    "lastUpdateModeValidParamMask": 1,
    "lastUpdateTimeActionStatusv": "16/02/2018 14:37:58.584",
    "lastUpdateTimeCheckingStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFMonId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeProtectionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeRidStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamExpectedValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamMask": "16/02/2018 14:37:58.584",
    "pus142ParameterMonitoringDefinition": Array [
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "16/02/2018 14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "16/02/2018 14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
    ],
    "ridStatus": 200,
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus142 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus144 pusService: 144 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 24,
  "groundDate": 1518791878584,
  "payload": Object {
    "fileMode": "1",
    "fileProtectionStatus": "2",
    "isFileSizeSet": false,
    "lastUpdateModeComputedChecksum": 2,
    "lastUpdateModeFileAddress": 2,
    "lastUpdateModeFileCreationTime": 3,
    "lastUpdateModeFileMode": 2,
    "lastUpdateModeFileProtectionStatus": 1,
    "lastUpdateModeFileSize": 1,
    "lastUpdateModeFileType": 1,
    "lastUpdateModeOnBoardFileId": 3,
    "lastUpdateModeUploadedChecksum": 2,
    "lastUpdateTimeComputedChecksum": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileAddress": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileCreationTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileMode": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileProtectionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileSize": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileType": "16/02/2018 14:37:58.584",
    "lastUpdateTimeOnBoardFileId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeUploadedChecksum": "16/02/2018 14:37:58.584",
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus144 pusService: 144 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 24,
  "groundDate": 1518791878584,
  "payload": Object {
    "fileMode": "2",
    "fileProtectionStatus": "2",
    "isFileSizeSet": false,
    "lastUpdateModeComputedChecksum": 3,
    "lastUpdateModeFileAddress": 3,
    "lastUpdateModeFileCreationTime": 1,
    "lastUpdateModeFileMode": 3,
    "lastUpdateModeFileProtectionStatus": 2,
    "lastUpdateModeFileSize": 2,
    "lastUpdateModeFileType": 2,
    "lastUpdateModeOnBoardFileId": 1,
    "lastUpdateModeUploadedChecksum": 2,
    "lastUpdateTimeComputedChecksum": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileAddress": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileCreationTime": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileMode": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileProtectionStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileSize": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFileType": "16/02/2018 14:37:58.584",
    "lastUpdateTimeOnBoardFileId": "16/02/2018 14:37:58.584",
    "lastUpdateTimeUploadedChecksum": "16/02/2018 14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus144 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: 0 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 26,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatus": 1,
    "forwardingStatusRidSid": 2,
    "lastUpdateModeCollectInterval": 1,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 3,
    "lastUpdateModeGenMode": 3,
    "lastUpdateModeSid": 3,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeValidParamExpValue": 2,
    "lastUpdateModeValidParamId": 1,
    "lastUpdateTimeCollectInterval": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFwdStatusTypeRidSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "16/02/2018 14:37:58.584",
    "lastUpdateTimeGenMode": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamExpValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamId": "16/02/2018 14:37:58.584",
    "pusMmePacketParameter": Array [
      Object {
        "lastUpdateModeFilteredStatus": 1,
        "lastUpdateModeParameterId": 2,
        "lastUpdateTimeFilteredStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeParameterId": "16/02/2018 14:37:58.584",
      },
      Object {
        "lastUpdateModeFilteredStatus": 1,
        "lastUpdateModeParameterId": 1,
      },
    ],
    "pusMmePacketStore": Array [
      Object {
        "lastUpdateModeStoreId": 1,
        "lastUpdateModeStoreStatus": 2,
        "lastUpdateModeSubSamplingRatio": 1,
        "lastUpdateTimeStoreId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeStoreStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "storeStatus": 3,
      },
      Object {
        "lastUpdateModeStoreId": 2,
        "lastUpdateModeStoreStatus": 2,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimeStoreId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeStoreStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "storeStatus": 1,
      },
    ],
    "serviceApid": 2,
    "status": 200,
  },
}
`;

exports[`getPayload getPayload :: PusMme pusService: 0 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 26,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatus": 200,
    "forwardingStatusRidSid": 200,
    "lastUpdateModeCollectInterval": 2,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 1,
    "lastUpdateModeGenMode": 1,
    "lastUpdateModeSid": 1,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeValidParamExpValue": 2,
    "lastUpdateModeValidParamId": 2,
    "lastUpdateTimeCollectInterval": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFwdStatusTypeRidSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "16/02/2018 14:37:58.584",
    "lastUpdateTimeGenMode": "16/02/2018 14:37:58.584",
    "lastUpdateTimeSid": "16/02/2018 14:37:58.584",
    "lastUpdateTimeStatus": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamExpValue": "16/02/2018 14:37:58.584",
    "lastUpdateTimeValidParamId": "16/02/2018 14:37:58.584",
    "pusMmePacketParameter": Array [
      Object {
        "lastUpdateModeFilteredStatus": 2,
        "lastUpdateModeParameterId": 2,
        "lastUpdateTimeFilteredStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeParameterId": "16/02/2018 14:37:58.584",
      },
      Object {
        "lastUpdateModeFilteredStatus": 3,
        "lastUpdateModeParameterId": 1,
      },
    ],
    "pusMmePacketStore": Array [
      Object {
        "lastUpdateModeStoreId": 1,
        "lastUpdateModeStoreStatus": 1,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimeStoreId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeStoreStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "storeStatus": 3,
      },
      Object {
        "lastUpdateModeStoreId": 3,
        "lastUpdateModeStoreStatus": 3,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimeStoreId": "16/02/2018 14:37:58.584",
        "lastUpdateTimeStoreStatus": "16/02/2018 14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "16/02/2018 14:37:58.584",
        "storeStatus": 200,
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: PusMme pusService: test serviceApid:  should be undefined 1`] = `undefined`;
